--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ p{color:#000000;}
 <hr>
 <br/><br/>
 <a href="netcat.html"><button  style='width:350px;font-size:22px;text-align:center;background-color:#EE2C2C;text-shadow: 4px 4px 4px black;color:#FFFFFF'class="pointer" onMouseOver="msgs.innerHTML='有效载荷、插件加载器(端口9019)。'" ; onmouseout="msgs2.innerHTML='PS5 4.03折腾测试版'" type="button"><b>插件加载器</button></a>
-<a href="netcat.html#payload=ps5-kstuff.bin"><button  style='width:350px;font-size:22px;text-align:center;background-color:#EE2C2C;text-shadow: 4px 4px 4px black;color:#FFFFFF'class="pointer" onMouseOver="msgs.innerHTML='一键折腾PS4模式 fpkg运行OK。'" ; onmouseout="msgs2.innerHTML='PS5 4.03折腾测试版'" type="button"><b>一键KSTUFF</button></a>
+<a href="netcat2.html#payload=ps5-kstuff.bin"><button  style='width:350px;font-size:22px;text-align:center;background-color:#EE2C2C;text-shadow: 4px 4px 4px black;color:#FFFFFF'class="pointer" onMouseOver="msgs.innerHTML='一键折腾PS4模式 fpkg运行OK。'" ; onmouseout="msgs2.innerHTML='PS5 4.03折腾测试版'" type="button"><b>一键KSTUFF</button></a>
 </body>
 <br/><br/>
 
