--- a/index.html
+++ b/index.html
@@ -122,12 +122,16 @@ p{color:#000000;}
 
 <br/><br/>
 
-<div style="text-align:center" font size="5" ><div style=color:blue;"><h1 id=msgs style='text-align:center;'>PS5 4.03折腾测试版V2</h1>
+<div style="text-align:center" font size="5" ><div style=color:blue;"><h1 id=msgs style='text-align:center;'>PS5 4.03折腾测试版V3</h1>
 <hr>
 <br/><br/>
-<a href="netcat.html"><button  style='width:350px;font-size:25px;text-align:center;background-color:#EE2C2C;text-shadow: 4px 4px 4px black;color:#FFFFFF'class="pointer" onMouseOver="msgs.innerHTML='有效载荷、插件加载器(端口9019)。'" ; onmouseout="msgs2.innerHTML='PS5 4.03折腾测试版'" type="button"><b>Bin加载器</button></a>
-<a href="netcat2.html#payload=ps5-kstuff.bin"><button  style='width:350px;font-size:25px;text-align:center;background-color:#EE2C2C;text-shadow: 4px 4px 4px black;color:#FFFFFF'class="pointer" onMouseOver="msgs.innerHTML='一键折腾PS4模式 fpkg运行OK。'" ; onmouseout="msgs2.innerHTML='PS5 4.03折腾测试版'" type="button"><b>一键KSTUFF</button></a>
-<a href="elfloader/index.html"><button  style='width:350px;font-size:25px;text-align:center;background-color:#EE2C2C;text-shadow: 4px 4px 4px black;color:#FFFFFF'class="pointer" onMouseOver="msgs.innerHTML='有效载荷、插件加载器(端口9020)。'" ; onmouseout="msgs2.innerHTML='PS5 4.03折腾测试版'" type="button"><b>Elf加载器</button></a>
+<a href="netcat.html"><button  style='width:350px;font-size:25px;text-align:center;background-color:green;text-shadow: 4px 4px 4px black;color:#FFFFFF'class="pointer" onMouseOver="msgs.innerHTML='有效载荷、插件加载器(端口9019)。'" ; onmouseout="msgs2.innerHTML='PS5 4.03折腾测试版'" type="button"><b>Bin加载器</button></a>
+<a href="elfloader/index.html"><button  style='width:350px;font-size:25px;text-align:center;background-color:green;text-shadow: 4px 4px 4px black;color:#FFFFFF'class="pointer" onMouseOver="msgs.innerHTML='有效载荷、插件加载器(端口9020)。'" ; onmouseout="msgs2.innerHTML='PS5 4.03折腾测试版'" type="button"><b>Elf加载器</button></a>
+<br/><br/>
+<a href="netcat2.html#payload=ps5-kstuff1.bin"><button  style='width:350px;font-size:25px;text-align:center;background-color:#EE2C2C;text-shadow: 4px 4px 4px black;color:#FFFFFF'class="pointer" onMouseOver="msgs.innerHTML='一键折腾PS4模式 fpkg运行OK（2023.10.7)'" ; onmouseout="msgs2.innerHTML='PS5 4.03折腾测试版'" type="button"><b>一键KSTUFF V1</button></a>
+<a href="netcat2.html#payload=ps5-kstuff2.bin"><button  style='width:350px;font-size:25px;text-align:center;background-color:#EE2C2C;text-shadow: 4px 4px 4px black;color:#FFFFFF'class="pointer" onMouseOver="msgs.innerHTML='一键折腾PS4模式 fpkg运行OK（2023.10.9)'" ; onmouseout="msgs2.innerHTML='PS5 4.03折腾测试版'" type="button"><b>一键KSTUFF V2</button></a>
+<a href="netcat2.html#payload=ps5-kstuff3.bin"><button  style='width:350px;font-size:25px;text-align:center;background-color:#EE2C2C;text-shadow: 4px 4px 4px black;color:#FFFFFF'class="pointer" onMouseOver="msgs.innerHTML='一键折腾PS4模式 fpkg运行OK（2023.10.10)'" ; onmouseout="msgs2.innerHTML='PS5 4.03折腾测试版'" type="button"><b>一键KSTUFF V3</button></a>
+
 </body>
 <br/><br/>
 <br/>
