--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@ function DisplayCacheProgress(){setTimeout(function(){window.msgs.innerHTML="离
             id="credits">
 <hr><br/>
 			<a  style='font-size:20px;text-align:center;'>
-             开发人员：Specter、Andy Nguyen/theflow0 、ChendoChap、sleirsgoevy、flatz、cheburek3000...</b></a>
+             开发人员：Specter、Andy Nguyen/theflow0 、ChendoChap、sleirsgoevy、flatz、cheburek3000、zecoxao...</b></a>
 			 <br>
 			<a  style='font-size:20px;text-align:center;'>
-             2023.10.26</b></a>
+             2023.10.28</b></a>
         </h3>
         </center>
     </div>
