--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div></div>
                 <div></div>
             </div>
-            <p id="jb-progress-status-text" style="text-align: center; width: 100%;font-size:32px;">&#x52A0;&#x8F7D;&#x4E2D;... <br/><span class="secondary-text">((&#x5982;&#x679C;&#x51BB;&#x7ED3;&#xFF0C;&#x8BF7;&#x91CD;&#x542F;&#x518D;&#x8BD5;)</span></p>
+            <p id="jb-progress-status-text" style="text-align: center; width: 100%;font-size:32px;">&#x52A0;&#x8F7D;&#x4E2D;... <br/><span class="secondary-text">(&#x5982;&#x679C;&#x51BB;&#x7ED3;&#xFF0C;&#x8BF7;&#x91CD;&#x542F;&#x518D;&#x8BD5;)</span></p>
             <textarea id="console" class="log" style="display: none;"></textarea>
         </div>
 
@@ -144,25 +144,18 @@
 
         <center style="position: fixed;bottom: 0;width: 100%;margin-bottom: 1.5rem;" class="info opacity-transition"
             id="credits">
-            <h3>
-                <b>2023.10.29</b>
-                <br />
-                <a href="https://twitter.com/theflow0" aria-hidden="true" tabindex="-1">@theflow0</a>,
-                <a href="https://twitter.com/SpecterDev" aria-hidden="true" tabindex="-1">@SpecterDev</a>,
-                ChendoChap,
-                <a href="https://twitter.com/Znullptr" aria-hidden="true" tabindex="-1">@Znullptr</a>,
-                <a href="https://twitter.com/sleirsgoevy" aria-hidden="true" tabindex="-1">@sleirsgoevy</a>,
-                <br />
-                <a href="https://twitter.com/psxdev" aria-hidden="true" tabindex="-1">@psxdev</a>,
-                <a href="https://twitter.com/flat_z" aria-hidden="true" tabindex="-1">@flat_z</a>,
-                <a href="https://twitter.com/notzecoxao" aria-hidden="true" tabindex="-1">@notzecoxao</a>,
-                <a href="https://twitter.com/SocraticBliss" aria-hidden="true" tabindex="-1">@SocraticBliss</a>,
-                laureeeeeee
-            </h3>
+<hr><br/>
+			<a  style='font-size:20px;text-align:center;'>
+             </b>Credits:Specter,Andy Nguyen,sleirsgoevy,flatz,LightningMods, ChendoChap, astrelsky, illusion,zecoxao,laureeeeeee,cheburek3000...</b></a>
+			 <br>
+			<a  style='font-size:20px;text-align:center;'>
+             2023.10.31</b></a>
+        </h3>
         </center>
     </div>
 
 </body>
 <script>
 
+</script>
 </script>
