--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
                 <h3 style="margin-top: 0;padding-top: 0;">
                     <br />
 			<a  style='font-size:20px;text-align:center;'>
-             </b>&#x5F00;&#x53D1;&#x4EBA;&#x5458;:Specter,Andy Nguyen,sleirsgoevy,flatz,LightningMods, ChendoChap, abc,astrelsky, illusion,zecoxao,laureeeeeee,cheburek3000...</b></a>
+             </b>&#x5F00;&#x53D1;&#x4EBA;&#x5458;:Specter,Andy Nguyen,sleirsgoevy,flatz,LightningMods, ChendoChap, astrelsky, illusion,zecoxao,laureeeeeee,cheburek3000...</b></a>
 			 <br>
 			<a  style='font-size:20px;text-align:center;'>
-             2024.02.12</b></a>
+             2024.03.31</b></a>
         </h3>
             </center>
         </div>
